[metadata]
name = IaS-Crypto
version = 0.0.1
author = Tim Bachmann, Raphael Kreft
author_email = t.bachmann@unibas.ch, r.kreft@unibas.ch
description = Simple Encryption Software
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/timbachmann/IaS-Crypto
project_urls =
    Bug Tracker = https://github.com/timbachmann/IaS-Crypto/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: POSIX :: Linux
    Natural Language :: English
    License :: OSI Approved :: MIT License
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src